<resources>
    <string name="app_name">Abroad</string>

    <!--  로그인  -->
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="hint_email">아이디를 입력해주세요</string>
    <string name="password">Password</string>
    <string name="hint_password">비밀번호를 입력해주세요</string>
    <string name="start">시작하기</string>
    <string name="not_yet_member">아직 회원이 아니신가요?</string>

    <!--  회원가입  -->
    <string name="sign_up">Sign up</string>
    <string name="nationality">Nationality</string>
    <string name="not_choosed_nation">국적을 선택하지 않았습니다.</string>
    <string name="search">검색</string>
    <string name="name">Name</string>
    <string name="intro">Intro</string>
    <string name="no_auth">아이디 비밀번호를 확인해주세요</string>
    <string name="hint_name">별명을 입력해주세요</string>
    <string name="hint_intro">자기 소개를 입력해요주세요</string>
    <string name="gallery_error">이미지를 가져오는데 오류가 발생했습니다</string>

    <!--  국가 검색  -->
    <string name="search_nation">국가 이름을 입력해주세요</string>
    <string name="search_city">도시 이름을 입력해주세요</string>
    <string name="confirm_choose">선택완료</string>

    <!--  로그인, 회원가입 오류 메세지  -->
    <string name="empty_email">이메일을 입력해주세요</string>
    <string name="empty_password">비밀번호를 입력해주세요</string>
    <string name="empty_name">닉네임을 설정해주세요</string>
    <string name="empty_intro">자기소개를 입력해주세요</string>
    <string name="empty_profile">프로필 사진을 등록해주세요</string>
    <string name="empty_nation">국가를 선택해 주세요</string>
    <string name="wrong_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="wrong_password">비밀번호는 공백을 포함 할 수 없습니다.</string>
    <string name="wrong_name">닉네임은 공백을 포함 할 수 없습니다.</string>
    <string name="wrong_intro">최소 10자 이상의 자기소개를 입력해주세요</string>
    <string name="short_password">비밀번호 6자리 이상 입력해주세요</string>
    <string name="btn_sign_up">가입하기</string>
    <string name="cancel">취소</string>
    <string name="select_place">국가 선택</string>

    <!--  게시물 작성  -->
    <string name="empty_title">제목을 작성해주세요</string>
    <string name="empty_content">내용을 작성해주세</string>
    <string name="not_selected_place">여행할 국가와 도시를 선택해주세요.</string>
    <string name="no_period">여행할 기간을 설정해주세요</string>
    <string name="post_failed">게시물 작성에 실패했습니다. 잠시 후 다시 시도해주세요</string>
</resources>
