<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="com.lyh.abroad.presenter.base.signin.SignUpViewModel" />

        <variable
            name="placeViewModel"
            type="com.lyh.abroad.presenter.place.PlaceViewModel" />

        <import type="android.view.View" />

        <import type="com.lyh.abroad.presenter.base.BaseViewModel.Status" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sign_up_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/cancel"
                        android:textColor="@android:color/holo_red_light" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/sign_up_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:onClick="@{() -> signUpViewModel.signUp(placeViewModel.countryLiveData)}"
                        android:padding="15dp"
                        android:text="@string/btn_sign_up"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sign_up_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="44dp"
                    android:text="@string/app_name"
                    android:textColor="#88B8B8B8"
                    android:textSize="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sign_up_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="38dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/sign_up_logo"
                    app:layout_constraintTop_toBottomOf="@id/sign_up_logo" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/shape_card"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sign_up_title">

                    <ImageView
                        android:id="@+id/add_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/add_user"
                        app:layout_constraintEnd_toStartOf="@id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:profileUri="@{signUpViewModel.profileUriLiveData}" />

                    <TextView
                        android:id="@+id/nation_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:text="@string/nationality"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toTopOf="@id/choosed_nation"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintTop_toTopOf="@id/add_profile" />

                    <TextView
                        android:id="@+id/choosed_nation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@{placeViewModel.countryLiveData == null? @string/not_choosed_nation : placeViewModel.countryLiveData.countryName}"
                        android:textColor="#303030"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toTopOf="@id/search_nation"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/nation_title"
                        tools:text="@string/not_choosed_nation" />

                    <Button
                        android:id="@+id/search_nation"
                        android:layout_width="48dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/shape_round"
                        android:text="@string/search"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="@id/add_profile"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/choosed_nation" />

                    <TextView
                        android:id="@+id/sign_up_name_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/add_profile"
                        app:layout_goneMarginTop="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_up_name_input_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/hint_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sign_up_name_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={signUpViewModel.nameLiveData}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/sign_up_intro_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/intro"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sign_up_name_input_layout"
                        app:layout_goneMarginTop="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_up_intro_text_layer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/hint_intro"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sign_up_intro_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_intro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={signUpViewModel.introLiveData}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/sign_up_email_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sign_up_intro_text_layer"
                        app:layout_goneMarginTop="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_up_email_text_layer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/hint_email"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sign_up_email_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:text="@={signUpViewModel.emailLiveData}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/sign_up_password_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sign_up_email_text_layer"
                        app:layout_goneMarginTop="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_up_password_text_layer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/hint_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sign_up_password_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@={signUpViewModel.passwordLiveData}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.4" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ProgressBar
                    android:id="@+id/pg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{signUpViewModel.statusLiveData instanceof Status.Loading? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>